feat: handle uploading media in chats
